# AlgorithmsForMemoriesProject

./: Makefile  README.txt
CSVs/BruteForce/12Bit/: bruteForce_setSize1000_bitLength12.csv  bruteForce_setSize4000_bitLength12.csv
CSVs/BruteForce/16Bit/: bruteForce_setSize10000_bitLength16.csv  bruteForce_setSize1000_bitLength16.csv  bruteForce_setSize5000_bitLength16.csv
CSVs/BruteForce/20Bit/: bruteForce_setSize10000_bitLength20.csv  bruteForce_setSize2500_bitLength20.csv  bruteForce_setSize500_bitLength20.csv
CSVs/BruteForce/8Bit/: bruteForce_setSize100_bitLength8.csv  bruteForce_setSize200_bitLength8.csv  bruteForce_setSize250_bitLength8.csv  bruteForce_setSize50_bitLength8.csv
CSVs/MultiHashLSH/12Bit/: multiHashLSH_setSize1000_bitLength12.csv  multiHashLSH_setSize100_bitLength12.csv  multiHashLSH_setSize2000_bitLength12.csv  multiHashLSH_setSize250_bitLength12.csv
CSVs/MultiHashLSH/16Bit/: multiHashLSH_setSize30000_bitLength16.csv  multiHashLSH_setSize500_bitLength16.csv
CSVs/MultiHashLSH/20Bit/: multiHashLSH_setSize10000_bitLength20.csv  multiHashLSH_setSize1000_bitLength20.csv  multiHashLSH_setSize2500_bitLength20.csv  multiHashLSH_setSize5000_bitLength20.csv
CSVs/MultiHashLSH/8Bit/: multiHashLSH_setSize250_bitLength8.csv  multiHashLSH_setSize50_bitLength8.csv
Hamming code/: HammingDistance.cpp  HammingDistance.hpp  main.cpp  testing.cpp  testing.hpp
Hamming code/CSVs/BruteForce/12Bit/: bruteForce_setSize100_bitLength12.csv  (+3 more)
Levenshtein code/: CMakeLists.txt  Code.cpp  Code.hpp  Export.cpp  Export.hpp  Word.cpp  Word.hpp  main.cpp
(+16 files in other folders)
